[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/Object/Recharge.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/uibutton.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/img/effect/Nectar.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.894118, 0.768627, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.572549, 0.572549, 1 )
border_color = Color( 0.807843, 0.772549, 0.772549, 1 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="CircleShape2D" id=8]
radius = 62.0083

[node name="Recharge" type="Area2D"]
collision_layer = 2048
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 1
playing = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0281
margin_top = -53.1787
margin_right = 37.9719
margin_bottom = -34.1787
rect_min_size = Vector2( 70, 0 )
mouse_filter = 2
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Recharge_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Recharge_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
